[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Font/Polentical Neon Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Src/UI/ScorePanel.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 28
outline_color = Color( 0.988235, 0.988235, 0.988235, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 14
outline_color = Color( 0.988235, 0.988235, 0.988235, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 14
font_data = ExtResource( 1 )

[node name="ScorePanel" type="ColorRect"]
margin_right = 200.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 42 )
color = Color( 0.219608, 1, 0, 0 )
script = ExtResource( 3 )

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color( 1, 0.372549, 0.372549, 1 )
polygon = PoolVector2Array( 6, 0, 0, 40, 194, 40, 200, 0 )

[node name="Polygon2D2" type="Polygon2D" parent="Polygon2D"]
color = Color( 0.172549, 0.172549, 0.172549, 1 )
offset = Vector2( 1, 2 )
polygon = PoolVector2Array( 6, 0, 0, 40, 194, 40, 200, 0 )

[node name="HBoxContainer" type="HBoxContainer" parent="Polygon2D/Polygon2D2"]
margin_left = 9.0
margin_right = 196.0
margin_bottom = 40.0
custom_constants/separation = 20

[node name="RankingLabel" type="Label" parent="Polygon2D/Polygon2D2/HBoxContainer"]
margin_right = 10.0
margin_bottom = 40.0
size_flags_vertical = 1
custom_colors/font_color = Color( 0.988235, 0.988235, 0.988235, 1 )
custom_fonts/font = SubResource( 1 )
text = "1"
align = 1
valign = 1

[node name="NameLabel" type="Label" parent="Polygon2D/Polygon2D2/HBoxContainer"]
margin_left = 30.0
margin_right = 105.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_colors/font_color = Color( 0.988235, 0.988235, 0.988235, 1 )
custom_fonts/font = SubResource( 2 )
valign = 1
autowrap = true

[node name="TimeLabel" type="Label" parent="Polygon2D/Polygon2D2/HBoxContainer"]
margin_left = 125.0
margin_right = 187.0
margin_bottom = 40.0
size_flags_vertical = 1
custom_colors/font_color = Color( 0.988235, 0.988235, 0.988235, 1 )
custom_fonts/font = SubResource( 3 )
text = "--:--.---"
align = 1
valign = 1
